--- a/src/view_pesquisar/JDlgJmj_VendedorPesquisar.form
+++ b/src/view_pesquisar/JDlgJmj_VendedorPesquisar.form
@@ -42,7 +42,7 @@
               <Component id="jScrollPane1" min="-2" pref="275" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="jButton1" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="10" max="32767" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
